--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,visualstudiocode,react,node
 
 # Personal
-user_authentication.txt
+chapter
 
 ### macOS ###
 # General
